--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,18 +13,13 @@ jobs:
     steps:
       - name: Clone repository
         uses: actions/checkout@v2
-        
-      - name: Test
-        run: |
-          ls -l
-          R=$(shuf -n1 ./text.txt)
-          echo $R
 
       - name: Auto green
         run: |
+          R=$(shuf -n1 ./text.txt)
           git config --local user.email "2438211370@qq.com"
           git config --local user.name "lhlyu"
           git remote set-url origin https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
           git pull --rebase
-          git commit --allow-empty -m "must be ragged but I stay by your side"
+          git commit --allow-empty -m $R
           git push
