--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,9 @@ jobs:
         run: |
           R=$(shuf -n1 ./text.txt)
           S=$(curl --compressed https://v1.hitokoto.cn/?c=a&encode=text)
+          echo '------------>'
           echo $S
+          echo '------------>'
           git config --local user.email "2438211370@qq.com"
           git config --local user.name "lhlyu"
           git remote set-url origin https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
