--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,9 +15,10 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Auto green
-        if: $RANDOM > 16383
         run: |
           echo 'begining'
+          R=$RANDOM
+          echo $R
           S=$(curl 'https://v1.hitokoto.cn/?c=a&encode=text')
           git config --local user.email "2438211370@qq.com"
           git config --local user.name "lhlyu"
