--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - master
   schedule:
-    - cron: "0 0,4,8,12,16,20 * * *"
+    - cron: "0 */3 * * *"
 
 jobs:
   autogreen:
